--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "berthutapea",
+  "name": "edwin",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -38,10 +38,22 @@
       "react-app/jest"
     ]
   },
-
   "devDependencies": {
     "autoprefixer": "^10.4.7",
+    "module-name": "^0.0.1-security",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.0.24"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
